[package]
name = "jetty"
version = "0.2.1"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2021"
description = "Jet clustering"
readme = "Readme.md"
license = "GPL-3.0-or-later"
keywords = ["physics", "jets"]
categories = ["science"]
repository = "https://github.com/a-maier/jetty"
exclude = ["data", "examples/bench*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noisy_float = "0.2"
log = "0.4"

[dev-dependencies]
anyhow = "1.0"
cpu-time = "1.0"
env_logger = "0.10"
rmp-serde = "1.1"
zstd = "0.12"
