[package]
name = "jetty"
version = "0.4.1"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2021"
description = "Jet clustering"
readme = "Readme.md"
license = "GPL-3.0-or-later"
keywords = ["physics", "jets"]
categories = ["science"]
repository = "https://github.com/a-maier/jetty"
exclude = ["data", "examples/bench*"]

[dependencies]
indexmap = "2.2"
itertools = "0.12"
log = "0.4"
noisy_float = "0.2"
num-traits = "0.2"

[dev-dependencies]
anyhow = "1.0"
cpu-time = "1.0"
env_logger = "0.11"
rmp-serde = "1.1"
zstd = "0.13"
